--- a/templates/mainapp/last_posts.html
+++ b/templates/mainapp/last_posts.html
@@ -34,7 +34,7 @@
                   <a type="button" class="btn btn-sm btn-outline-secondary">{% trans 'Edit' %}</a>
                 </div>
 
-                <small class="text-muted">{{ post.user}}, {{ post.date | date:"d.m.Y" }}</small>
+                <small class="text-muted">{{ post.iuser}}, {{ post.date | date:"d.m.Y" }}</small>
 
               </div>
 
