--- a/templates/base.html
+++ b/templates/base.html
@@ -13,10 +13,13 @@
     
     <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" href="{% static 'js/script.js' %}">
+    <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
 
     <link rel="stylesheet" href="{% static 'star-ratings/css/star-ratings.css' %}">
     <script type="text/javascript" src="{% static 'star-ratings/js/dist/star-ratings.min.js' %}"></script>
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
 
 </head>
 
@@ -29,14 +32,8 @@
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="fw-light">{% trans 'Recommend.' %}</h1>
         <p class="lead text-muted">{% trans 'Recommendations for U' %}</p>
-
-        <form action = "{%  url 'search' %}" method = "get" class="d-flex">
-
-          <input class="form-control" type="search" placeholder="Search" name = "q">
-          &nbsp;
-          <button class="btn btn-primary" type="submit">{% trans 'Search' %}</button>
-
-        </form>
+        
+        {% include 'blocks/search.html' %}
 
       </div>
     </div>
