--- a/templates/blocks/footer.html
+++ b/templates/blocks/footer.html
@@ -1,12 +1,7 @@
 {% load i18n%}
 <div class="container">
   <footer class="py-3 my-4">
-    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <li class="nav-item"><a href="/" class="nav-link px-2 text-muted">{% trans 'Home' %}</a></li>
-      <li class="nav-item"><a href="/posts" class="nav-link px-2 text-muted">{% trans 'Posts' %}</a></li>
-      <li class="nav-item"><a href="/authors" class="nav-link px-2 text-muted">{% trans 'Authors' %}</a></li>
-      <li class="nav-item"><a href="#about" class="nav-link px-2 text-muted">{% trans 'About' %}</a></li>
-    </ul>
+    {% include 'blocks/menu_main.html' %}
     <p class="text-center text-muted">&copy; 2021, sga</p>
   </footer>
 </div>
